# TrackingIPM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yaml
benchs/: CMakeLists.txt  bench_quadv.cpp
cmake/: CodeCoverage.cmake  FindBlosc.cmake  FindSphinx.cmake  Findngspice.cmake  SpaceChargeConfig.cmake.in  SpaceChargeUtils.cmake
docs/: CMakeLists.txt  conf.py  index.rst
include/SpaceCharge/: alogger.hpp  boris.hpp  bunch.hpp  config.hpp.in  definitions.hpp  field_map.hpp  field_map_h5.hpp  fields.hpp  particle.hpp  point_cloud.hpp  quadv_h5.hpp  track.hpp  track_h5.hpp  units.hpp  version.hpp.in
lib/: CMakeLists.txt
lib/include/SpaceCharge/core/: definitions.hpp  interpolator.hpp  point_cloud.hpp  units.hpp
lib/include/SpaceCharge/field/: bunch.hpp  field_fdm.hpp  field_fem.hpp  field_map.hpp  fields.hpp
lib/include/SpaceCharge/io/: field_map_h5.hpp  particle_h5.hpp  quadv_h5.hpp  track_h5.hpp
lib/include/SpaceCharge/ionization/: bethe_model.hpp  medium.hpp
lib/include/SpaceCharge/readout/: ramo.hpp  strips_plane.hpp
lib/include/SpaceCharge/track/: boris.hpp  track.hpp
lib/src/: SpaceChargeConfig.cmake.in
lib/src/core/: CMakeLists.txt  alogger.cpp  particle.cpp
lib/src/field/: CMakeLists.txt  bunch.cpp  field_fdm.cpp  field_fem.cpp  field_map.cpp  fields.cpp
lib/src/io/: CMakeLists.txt  blosc_filter.c
lib/src/ionization/: CMakeLists.txt  bethe_model.cpp
lib/src/readout/: CMakeLists.txt  cascade.cpp  ramo.cpp  strips_plane.cpp
lib/src/track/: CMakeLists.txt  track.cpp
samples/: CMakeLists.txt  README.md
samples/sample_001/: CMakeLists.txt  field_h5.hpp  main.cpp
samples/sample_001/script/: readpy.py
samples/sample_002/: CMakeLists.txt  main.cpp
samples/sample_003/: CMakeLists.txt  main.cpp
samples/sample_003/script/: plot_traj.py  profile.py
samples/sample_004/: CMakeLists.txt  main.cpp
samples/sample_004/script/: read_fieldmap.py
samples/sample_005/: CMakeLists.txt  main.cpp
samples/sample_007/: CMakeLists.txt  main.cpp
samples/sample_008/: CMakeLists.txt  main.cpp  sonate.txt  strips_gaus.txt  strips_lin.txt
samples/sample_008/script/: gen_strip.py  ramo_001.py
samples/sample_009/: CMakeLists.txt  main.cpp  main_bis.cpp
samples/sample_009/scripts/: ramo_001.py  ramo_002.py
samples/sample_010/: CMakeLists.txt  README.md  main.cpp
samples/scripts/: conv.py  plotProfileT.py  read_fdm.py  read_fieldmap.py  read_track.py  readpy.py
src/: CMakeLists.txt  alogger.cpp  blosc_filter.c  bunch.cpp  field_map.cpp  fields.cpp  particle.cpp  track.cpp
temp/: CMakeLists.txt  field_h5.hpp  main.cpp  main2.cpp  readpy.py  vector.hpp  visuROOT.hpp
tests/: CMakeLists.txt  test_bunch.cpp  test_field.cpp  test_logger.cpp  test_particle.cpp
