# ##############################################################################
# Samples CMake file
# ##############################################################################
# Author: Florian Benedetti Date: 2021/03/15

add_subdirectory(sample_001)
add_subdirectory(sample_002)
add_subdirectory(sample_003)
add_subdirectory(sample_004)
add_subdirectory(sample_005)